<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp">

    <ImageView
        android:id="@+id/iv_user_avatar"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:contentDescription="@string/app_name"
        android:src="@mipmap/ic_launcher" />

    <TextView
        android:id="@+id/tv_user_name"
        style="@style/UserIntroStyle"
        android:text="@string/app_name"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tv_blog"
        style="@style/UserIntroStyle"
        android:layout_below="@id/tv_user_name"
        android:layout_marginTop="10dp"
        android:text="@string/blog" />

    <TextView
        android:id="@+id/tv_email"
        style="@style/UserIntroStyle"
        android:layout_below="@id/tv_blog"
        android:layout_marginTop="10dp"
        android:text="@string/email" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/iv_user_avatar"
        android:layout_marginTop="20dp">

        <TextView
            style="@style/UserIntroNumberStyle"
            android:text="@string/pub_repos_num"
            android:id="@+id/tv_pub_repos_num"/>

        <TextView
            android:id="@+id/tv_follower_num"
            style="@style/UserIntroNumberStyle"
            android:text="@string/follower_num" />

        <TextView
            android:id="@+id/tv_pub_gists_num"
            style="@style/UserIntroNumberStyle"
            android:text="@string/pub_gists_num" />

        <TextView
            android:id="@+id/tv_following_num"
            style="@style/UserIntroNumberStyle"
            android:text="@string/following_num" />

    </LinearLayout>
</RelativeLayout>